fix: disable lightningcss and add override

--- a/package.json
+++ b/package.json
@@ -4,20 +4,17 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "eslint"
+  "dev": "next dev --no-turbo",
+  "build": "next build",
+  "start": "next start"
   },
   "dependencies": {
     "dotenv": "^17.2.3",
     "lightningcss-darwin-arm64": "^1.30.2",
     "microcms-ts-sdk": "^1.2.0",
-    "next": "^15.1.6",
+    "next": "^16.0.0",
     "react": "^19.2.0",
-    "react-dom": "^19.2.0",
-    "react-icons": "^5.5.0",
-    "sass": "^1.93.2"
+    "react-dom": "^19.2.0"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4.1.16",
@@ -28,7 +25,11 @@
     "eslint": "^9",
     "eslint-config-next": "16.0.0",
     "postcss": "^8.5.6",
-    "tailwindcss": "^4.1.16",
+    "tailwindcss": "^3.4.18",
     "typescript": "^5"
   }
+}
+
+"overrides": {
+  "lightningcss": "1.25.1"
 }
