--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "microcms-ts-sdk": "^1.2.0",
     "next": "^16.0.0",
     "react": "^19.2.0",
-    "react-dom": "^19.2.0"
+    "react-dom": "^19.2.0",
+    "react-icons": "^5.5.0"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4.1.16",
