--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "dotenv": "^17.2.3",
+    "framer-motion": "^12.23.24",
     "microcms-ts-sdk": "^1.2.0",
     "next": "^16.0.0",
     "react": "^19.2.0",
